style: Stopwatch Content overflow 스크롤로 수정

--- a/src/widgets/contents/ui/StopwatchContent/index.module.scss
+++ b/src/widgets/contents/ui/StopwatchContent/index.module.scss
@@ -2,7 +2,12 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  ::-webkit-scrollbar {
+    display: none;
+  }
 
   & > .timer-wrapper {
     text-align: center;
@@ -47,10 +52,10 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    // overflow-y: scroll;
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    // &::-webkit-scrollbar {
+    //   display: none;
+    // }
   }
 }
